--- a/.github/workflows/fork_star.yml
+++ b/.github/workflows/fork_star.yml
@@ -1,20 +1,16 @@
 name: Update Fork Star
 
 on:
-  fork:
-  watch:
-    types:
-      - started
+  push:
+    branches:
+      - master
   schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
+    - cron: '0 19 * * *'
 
 jobs:
-  update:
+  update-readme:
     runs-on: ubuntu-latest
     steps:
-      - name: This repo has x stars y forks
-        uses: ouuan/This-repo-has-x-stars-y-forks-action@v2
+      - uses: isjhd/waka-readme@master
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          template: "isjhd's profile with <starCount> stars and <forkCount> forks 🎉"
+          WAKATIME_API_KEY: ${{ secrets.METRICS_TOKEN }}
